src/main/java/com/example/NYA_reservation/controller/error/CustomAccessDeniedHandler.java
package com.example.NYA_reservation.controller.error;

import jakarta.servlet.http.HttpServletRequest;
import jakarta.servlet.http.HttpServletResponse;
import org.springframework.security.access.AccessDeniedException;
import org.springframework.security.web.access.AccessDeniedHandler;
import org.springframework.stereotype.Component;

import static com.example.NYA_reservation.validation.ErrorMessage.E0010;
import java.io.IOException;

@Component
public class CustomAccessDeniedHandler implements AccessDeniedHandler {

    @Override
    public void handle(HttpServletRequest request,
                       HttpServletResponse response,
                       AccessDeniedException accessDeniedException) throws IOException {
        request.getSession().setAttribute("errorMessage", E0010);
        response.sendRedirect("/");
    }
}